<resources>
    <string name="app_name">Glypha-Primer-Parcial-Giardina-Saracco</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="inicio">Inicio</string>
    <string name="imagen_de_perfil_del_usuario">Imagen de perfil del usuario</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">\@usuario</string>
    <string name="favoritos">Favoritos</string>
    <string name="mi_nombre_es_pablo_martinez_me_llamo_la_atencion_esta_aplicaci_n_por_la_variedad_de_tipografias_que_ofrec_a_soy_progamador_front_end_y_pretendo_utilizar_las_fuentes_para_futuros_trabajos">Mi nombre es Pablo Martinez. Me llamo la atencion esta aplicación por la variedad de tipografias que ofrecía. Soy progamador front end y pretendo utilizar las fuentes para futuros trabajos.</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="seguidores">SEGUIDORES</string>
    <string name="_30">30</string>
    <string name="siguiendo">SIGUIENDO</string>
    <string name="_129">129</string>
    <string name="pablo_martinez">pablo.martinez</string>
    <string name="pablo">Pablo</string>
    <string name="buenos_aires_argentina">Buenos Aires, Argentina</string>
    <string name="busc_tu_tipo_ideal">Buscá tu tipo ideal</string>
    <string name="busc_por_clasificaci_n">Buscá por clasificación</string>
    <string name="tipos_si_buscar_inspiraci_n">Tipos si buscar inspiración</string>
    <string name="si_estas_buscando_algo_nuevo_este_es_tu_lugar">Si estas buscando algo nuevo, este es tu lugar</string>
    <string name="contemporanea">Contemporanea</string>
    <string name="serif">Serif</string>
    <string name="clasica">Clasica</string>
    <string name="moderna">Moderna</string>
    <string name="elegante">Elegante</string>
    <string name="glypha">GLYPHA</string>
    <string name="subtitulo_home">¡Vamos a encontrar tu Tipografía Ideal!</string>
    <string name="txt_cat_moderna">MODERNA</string>
    <string name="txt_cat_elegante">ELEGANTE</string>
    <string name="txt_cat_clasica">CLASICA</string>
    <string name="txt_cat_creativa">CREATIVA</string>
    <string name="cat_titulo">Categorías</string>
    <string name="tendencias_titulo">Tipografias en tendencias</string>
    <string name="placeholder_input_txt">Escribe aquí para probar la fuente seleccionada</string>
    <string name="txt_font_roboto">ROBOTO</string>
    <string name="txt_font_sansation">SANSATION</string>
    <string name="txt_font_playfair">PLAYFAIR-DISPLAY</string>
    <string name="txt_font_montserrat">MONTSERRAT</string>
    <string name="tendencias_subtitulo">Haz click en alguna de las tipografias para luego probarla</string>
    <string name="probar_fuente_txt">AåBbCc\n#9½\nƒ%£©∑Ø!</string>
    <string name="title_inspiracion_semanal">Inspiracion Semanal</string>
    <string name="title_inspiracion_semanal_tendencias">Tendencias</string>
    <string name="title_inspiracion_semanal_mas_usadas">Mas usadas</string>
    <string name="txt_login_mail">Mail</string>
    <string name="txt_login_password">Contraseña</string>
    <string name="txt_btn_login">Entrar</string>
    <string name="txt_login_forgot_pass">¿No tienes cuenta? Registrarse</string>
    <string name="txt_login_forgot_pass_2">¿Olvidaste tu contraseña?</string>
    <string name="admin">Admin</string>
    <string name="txt_btn_cerrar_sesion">Cerrar sesion</string>

</resources>