<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:id="@+id/register_containter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Título -->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glypha"
            android:textSize="48sp"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:layout_marginBottom="60dp"
            android:textColor="@color/bg_yellow" />

        <!-- Nombre -->
        <TextView
            android:id="@+id/txt_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/bg_yellow" />


        <EditText
            android:id="@+id/name_register_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"/>

        <!-- Mail -->
        <TextView
            android:id="@+id/txt_register_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_mail"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/bg_yellow" />


        <EditText
            android:id="@+id/mail_register_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="textEmailAddress" />

        <!-- Acerca de -->
        <TextView
            android:id="@+id/txt_register_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/bg_yellow" />


        <EditText
            android:id="@+id/about_register_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"/>

        <!-- Contraseña -->
        <TextView
            android:id="@+id/txt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/bg_yellow"/>


        <EditText
            android:id="@+id/password_register_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="textPassword" />

        <!-- Btn entrar -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/txt_btn_login"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:onClick="handleRegster"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>