<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_yellow"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="50dp"
        android:paddingEnd="24dp"
        android:paddingBottom="42dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleGlyph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glypha"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitleGlyph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/subtitulo_home"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blue_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/scrollGeneral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Seccion CATEGORIAS -->
                <LinearLayout
                    android:id="@+id/seccion_cat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tituloCategorias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/cat_titulo"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <HorizontalScrollView
                        android:id="@+id/categorias_scroll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/cat_cards_container"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <include
                                android:id="@+id/cardModerna"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardElegante"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardClasica"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardCreativa"
                                layout="@layout/cat_card" />
                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>

                <!-- Seccion  Tendencias-->

                <LinearLayout
                    android:id="@+id/seccion_tendecias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tituloTendencias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/tendencias_titulo"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:id="@+id/subtituloTendencias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/tendencias_subtitulo"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <HorizontalScrollView
                        android:id="@+id/tendencias_scroll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/cat_tendencias_container"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <include
                                android:id="@+id/cardSansation"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardPlayFair"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardRoboto"
                                layout="@layout/cat_card" />

                            <include
                                android:id="@+id/cardMontserrat"
                                layout="@layout/cat_card" />
                        </LinearLayout>
                    </HorizontalScrollView>

                    <EditText
                        android:id="@+id/inputFont"
                        android:hint="@string/placeholder_input_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/font_txtView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/probar_fuente_txt"
                        android:textColor="@color/bg_yellow"
                        android:textSize="48sp"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"/>

                </LinearLayout>

                <!-- Seccion  Inspo semanal-->

                <LinearLayout
                    android:id="@+id/seccion_inspo_semanal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tituloInspo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/title_inspiracion_semanal"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <include
                        android:id="@+id/mas_usadas_underline"
                        layout="@layout/seccion_underline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/tendencias_underline"
                        layout="@layout/seccion_underline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
